background image (not working&!)

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -1,4 +1,5 @@
 body {
+	background-image: url(resources/images/bg.jpg);
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	text-decoration: none;
 	font-size: 14px;
